Expand README with full feature walkthrough